CMTOOL-221: add support for JDK 11